--- a/assets/styles.css
+++ b/assets/styles.css
@@ -106,6 +106,11 @@ blockquote {
   font-size: var(--fontSize3);
 }
 
+code:first-of-type {
+  word-break: break-all;
+  white-space: break-spaces;
+}
+
 cite {
   display: block;
   text-align: end;
@@ -153,7 +158,6 @@ li:before {
 .demo__desktop {
   display: none;
 }
-
 
 .demo-beautiful-focus {
   position: absolute;
@@ -225,13 +229,18 @@ li:before {
     font-size: var(--fontSize5);
     margin: var(--spacings6) 0;
   }
+
+  code:first-of-type {
+    font-size: var(--fontSize4);
+  }
+
   .demo {
     margin-left: -32px;
     width: calc(100% + 64px);
   }
 }
 
-@media(min-width: 900px) {
+@media (min-width: 900px) {
   .demo__desktop {
     display: block;
   }
@@ -240,7 +249,6 @@ li:before {
   }
   .demo-beautiful-focus {
     animation: demo_desktop 6s infinite;
-
   }
 }
 
@@ -284,7 +292,6 @@ li:before {
     height: 60px;
     opacity: 0;
   }
-
 }
 
 @keyframes demo_desktop {
